changement photo projet 1 + detail dans loisirs

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="menu-burger">
         <nav class="navBarre">
-            <a href="#qqmots">En quelques mots</a>
-            <a href="#formation">Formation</a>
+            <a href="#formation">Formations</a>
             <a href="#competences">Compétences</a>
+            <a href="#projets">Projets</a>
             <a href="#experiences">Expériences</a>
             <a href="#centresInteret">Centres d'interêts</a>
         </nav>
@@ -30,6 +30,7 @@
     </div>
     <div class="conteneur">
         <div class="text-qqmots">
+            <p>Je suis actuellement à la recherche de stage de 4 mois à partir du mois d'août 2020, disponible sur la région Nantaise ou en remote sur toute la France.</p>
             <p>Après quelques années en comptabilité, j'ai décidé de me reconvertir en tant que devellopeuse web &
                 mobile. L'informatique m'a toujours attiré et après quelques mois de réflexion et de recherche j'ai
                 décidé de sauter le pas et de commencer une formation à <a href="https://www.wildcodeschool.com/fr-FR">
@@ -40,7 +41,7 @@
                 prioriser les choses et la gestion du temps qui sont des qualités essentielles dans ce dommaine.
                 Je pense donc que mes premières expériences peuvent être des atouts pour mes futurs postes.
             </p>
-            <p>Me voilà prête pour de nouvelles expériences</p>
+            <p>Me voilà prête pour de nouvelles expériences.</p>
         </div>
         <div class="idcard">
             <ul>
@@ -58,14 +59,14 @@
 </section>
 <section id="formation">
     <div class="soustitre">
-        <h2>Formation</h2>
+        <h2>Formations</h2>
     </div>
     <div class="conteneur">
         <div>
             <table>
                 <tr>
                     <td>2020:</td>
-                    <td> 5 mois de formation en Remote à la Wild Code School - Developpeur Web & Mobile option
+                    <td> 5 mois de formation en Remote à la Wild Code School de Nantes - Developpeur Web & Mobile option
                         JAVA
                     </td>
                 </tr>
@@ -95,17 +96,17 @@
         <img alt="logo GITHUB" class="logo1" src="images/github.png" title="GITHUB">
     </div>
 </section>
-<section id="experiences">
+<section id="projets">
     <div class="soustitre">
-        <h2>Expériences</h2>
+        <h2>Projets</h2>
     </div>
     <p>Pendant notre formation nous avont réalisés 3 projets :</p>
     <section class="section-projets">
         <div class="projet">
-            <a href="">
-                <img alt="image première page du site Ardoise - Projet 1" src="images/SharemyBrain-petite.png"/>
+            <a href="https://elisego.github.io/projet1/accueil.html">
+                <img alt="image première page du site Ardoise - Projet 1" src="images/LaPetiteArdoise.png"/>
             </a>
-            <p><u>Projet 1:</u> Nous avons créer le site d'un restaurant voisin de l'école. Nous avons utilisés : HTML,
+            <p><u>Projet 1:</u> Nous avons crée le site d'un restaurant voisin de l'école, en utilisant: HTML,
                 CSS
                 Le dépot du site est disponible sur <a href="https://github.com/elisego/projet1"> Github.</a></p>
         </div>
@@ -115,25 +116,24 @@
                      src="images/SharemyBrain-petite.png"/>
             </a>
             <p><u>Projet 2:</u> Nous avons créer un site style <a href="https://stackoverflow.com/"> Stackoverflow</a>
-                Nous avons
-                utilisés : HTML, CSS, JavaScript, MySQL
-                Le dépot du site est disponible sur <a
-                        href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
+                , en utilisant: HTML, CSS, JavaScript, MySQL
+                Le dépot du site est disponible sur <a href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
         </div>
         <div class="projet">
             <a href="https://nts-java-2003-pjt3-ressource.javarover.wilders.dev/">
                 <img alt="image première page du site Wesourse - Projet 3" src="images/Wesource-petite.png"/>
             </a>
-            <p><u>Projet 3:</u> Nous avons créer le site style Wesource à la demande de notre client. C'est une
-                plateforme pour
-                mettre en relation les fabricants de tissus et les fabricants de vêtements/a> Nous avons utilisés :
-                HTML, CSS, JavaScript, MySQL
-                Le dépot du site est disponible sur <a
-                        href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
+            <p><u>Projet client:</u> Nous avons crée le site Wesource à la demande de notre client. C'est une
+                plateforme pour mettre en relation les fabricants de tissus et les fabricants de vêtements, en utilisant:
+                HTML, CSS, JavaScript,Hibernte,  MySQL
+                Le dépot du site est disponible sur <a href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
         </div>
     </section>
-<section>
-        <h3>Autres expériences</h3>
+</section>
+    <section id="experiences">
+        <div class="soustitre">
+            <h2>Expériences</h2>
+        </div>
     <table>
         <tr>
             <td><u>2014/2019: </u></td>
@@ -154,16 +154,14 @@
     <div class="soustitre">
         <h2>Centres d’intérêts</h2>
     </div>
+
     <ul class="loisirs">
-        <li>Lecture</li>
-        <li>Rock</li>
-        <li>Loisirs créatif</li>
-        <li>Séries</li>
+        <li>Lecture: J'aime les livres avec une base historique tel que la série Outlander</li>
+        <li>Rock/Métal: Fan du festival Hellfest</li>
+        <li>Loisirs créatifs: Peinture, petit bricolage</li>
+        <li>Séries/Films: Series historique et les films de super héros </li>
     </ul>
-
 </section>
-
-
 <footer>
 
 </footer>
