--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="idcard">
             <ul>
-                <li><i class="fas fa-house-user"></i> Habite à Nantes</li>
+                <li><i class="fas fa-house-user"></i> 7 rue Bisson Nantes</li>
                 <li><i class="fas fa-phone-square-alt"></i> 06 28 75 62 41</li>
                 <li><i class="fas fa-at"></i> elise.godard@gmail.com</li>
                 <li><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/elisegodard/"> Linkelin</a>
