--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="conteneur">
         <div class="text-qqmots">
-            <p>Je suis actuellement à la recherche de stage de 4 mois à partir du mois d'août 2020, disponible sur la région Nantaise ou en remote sur toute la France.</p>
+            <p>Je suis actuellement à la recherche d'un stage de 4 mois à partir du mois d'août 2020, disponible sur la région Nantaise ou en remote sur toute la France.</p>
             <p>Après quelques années en comptabilité, j'ai décidé de me reconvertir en tant que devellopeuse web &
                 mobile. L'informatique m'a toujours attiré et après quelques mois de réflexion et de recherche j'ai
                 décidé de sauter le pas et de commencer une formation à <a href="https://www.wildcodeschool.com/fr-FR">
@@ -115,7 +115,7 @@
                 <img alt="image première page du site ShareMyBrain - Projet 2"
                      src="images/SharemyBrain-petite.png"/>
             </a>
-            <p><u>Projet 2:</u> Nous avons créer un site style <a href="https://stackoverflow.com/"> Stackoverflow</a>
+            <p><u>Projet 2:</u> Nous avons crée un site style <a href="https://stackoverflow.com/"> Stackoverflow</a>
                 , en utilisant: HTML, CSS, JavaScript, MySQL
                 Le dépot du site est disponible sur <a href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
         </div>
@@ -123,9 +123,9 @@
             <a href="https://nts-java-2003-pjt3-ressource.javarover.wilders.dev/">
                 <img alt="image première page du site Wesourse - Projet 3" src="images/Wesource-petite.png"/>
             </a>
-            <p><u>Projet client:</u> Nous avons crée le site Wesource à la demande de notre client. C'est une
-                plateforme pour mettre en relation les fabricants de tissus et les fabricants de vêtements, en utilisant:
-                HTML, CSS, JavaScript,Hibernte,  MySQL
+            <p><u>Projet client:</u> Nous avons crée le site Wesource. C'est une
+                plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements, en utilisant:
+                HTML, CSS, JavaScript, Hibernte, MySQL
                 Le dépot du site est disponible sur <a href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
         </div>
     </section>
@@ -159,7 +159,7 @@
         <li>Lecture: J'aime les livres avec une base historique tel que la série Outlander</li>
         <li>Rock/Métal: Fan du festival Hellfest</li>
         <li>Loisirs créatifs: Peinture, petit bricolage</li>
-        <li>Séries/Films: Series historique et les films de super héros </li>
+        <li>Séries/Films: Series historiques et les films de super héros (Marvel) </li>
     </ul>
 </section>
 <footer>
