--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="text-qqmots">
             <p>Je suis actuellement à la recherche d'un stage de 4 mois à partir du mois d'août 2020, disponible sur la région Nantaise ou en remote sur toute la France.</p>
             <p>Après quelques années en comptabilité, j'ai décidé de me reconvertir en tant que devellopeuse web &
-                mobile. L'informatique m'a toujours attiré et après quelques mois de réflexion et de recherche j'ai
+                mobile. L'informatique m'a toujours attiré et après quelques mois de réflexion et de recherches j'ai
                 décidé de sauter le pas et de commencer une formation à <a href="https://www.wildcodeschool.com/fr-FR">
                     la Wild Code School.</a>
             </p>
@@ -52,7 +52,7 @@
                 </li>
                 <li><i class="fab fa-github"></i><a href="https://github.com/elisego"> Github</a></li>
                 <li><i class="fas fa-file-download"></i>
-                    <a class="download" download href="images/cv_eg.pdf" target="_blank"> Télécharger mon CV</a></li>
+                    <a class="download" download href="images/C.V.%20EG%20.pdf" target="_blank"> Télécharger mon CV</a></li>
             </ul>
         </div>
     </div>
