--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>CV Elise GODARD</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/8f4bb5d891.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet" type="text/css"/>
+    <link href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" rel="stylesheet" type="text/css"/>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -30,7 +32,8 @@
     </div>
     <div class="conteneur">
         <div class="text-qqmots">
-            <p>Je suis actuellement à la recherche d'un stage de 4 mois à partir du mois d'août 2020, disponible sur la région Nantaise ou en remote sur toute la France.</p>
+            <p>Je suis actuellement à la recherche d'un stage de 4 mois à partir du mois d'août 2020, disponible sur la
+                région Nantaise ou en remote sur toute la France.</p>
             <p>Après quelques années en comptabilité, j'ai décidé de me reconvertir en tant que devellopeuse web &
                 mobile. L'informatique m'a toujours attiré et après quelques mois de réflexion et de recherches j'ai
                 décidé de sauter le pas et de commencer une formation à <a href="https://www.wildcodeschool.com/fr-FR">
@@ -52,7 +55,8 @@
                 </li>
                 <li><i class="fab fa-github"></i><a href="https://github.com/elisego"> Github</a></li>
                 <li><i class="fas fa-file-download"></i>
-                    <a class="download" download href="images/C.V.%20EG%20.pdf" target="_blank"> Télécharger mon CV</a></li>
+                    <a class="download" download href="images/C.V.%20EG%20.pdf" target="_blank"> Télécharger mon CV</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -94,55 +98,83 @@
         <img alt="Logo Hibernate" class="logo1" src="images/hibernate.png" title="HIBERNATE">
         <img alt="logo SQL" class="logo1" src="images/mysql.png" title="MYSQL">
         <img alt="logo GITHUB" class="logo1" src="images/github.png" title="GITHUB">
+        <img alt="logo Materialize" class="logo1" src="images/materialize.png" title="MATERIALIZE">
     </div>
 </section>
 <section id="projets">
     <div class="soustitre">
         <h2>Projets</h2>
     </div>
-    <p>Pendant notre formation nous avont réalisés 3 projets :</p>
+    <!--    //TODO: rajouter les hackathons-->
+    <p>Pendant notre formation nous avont réalisés 3 projets et 2 hackathons:</p>
     <section class="section-projets">
-        <div class="projet">
-            <a href="https://elisego.github.io/projet1/accueil.html">
-                <img alt="image première page du site Ardoise - Projet 1" src="images/LaPetiteArdoise.png"/>
-            </a>
-            <p><u>Projet 1:</u> Nous avons crée le site d'un restaurant voisin de l'école, en utilisant: HTML,
-                CSS
-                Le dépot du site est disponible sur <a href="https://github.com/elisego/projet1"> Github.</a></p>
-        </div>
-        <div class="projet">
-            <a href="https://nts-java-2003-pjt2-sharemybrain.javarover.wilders.dev/">
-                <img alt="image première page du site ShareMyBrain - Projet 2"
-                     src="images/SharemyBrain-petite.png"/>
-            </a>
-            <p><u>Projet 2:</u> Nous avons crée un site style <a href="https://stackoverflow.com/"> Stackoverflow</a>
-                , en utilisant: HTML, CSS, JavaScript, MySQL
-                Le dépot du site est disponible sur <a href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
-        </div>
-        <div class="projet">
-            <a href="https://nts-java-2003-pjt3-ressource.javarover.wilders.dev/">
-                <img alt="image première page du site Wesourse - Projet 3" src="images/Wesource-petite.png"/>
-            </a>
-            <p><u>Projet client:</u> Nous avons crée le site Wesource. C'est une
-                plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements, en utilisant:
-                HTML, CSS, JavaScript, Hibernte, MySQL
-                Le dépot du site est disponible sur <a href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
+        <div class="multiple-items">
+            <div class="projet">
+                <a href="https://elisego.github.io/projet1/accueil.html">
+                    <img alt="image première page du site Ardoise - Projet 1" src="images/LaPetiteArdoise.png"/>
+                </a>
+                <p><u>Projet 1:</u> Nous avons crée le site d'un restaurant voisin de l'école, en utilisant: HTML,
+                    CSS - 1 semaine
+                    Le dépot du site est disponible sur <a href="https://github.com/elisego/projet1"> Github.</a></p>
+            </div>
+            <div class="projet">
+                <a href="https://nts-java-2003-pjt2-sharemybrain.javarover.wilders.dev/">
+                    <img alt="image première page du site ShareMyBrain - Projet 2"
+                         src="images/SharemyBrain-petite.png"/>
+                </a>
+                <p><u>Projet 2:</u> Nous avons crée un site style <a href="https://stackoverflow.com/">
+                    Stackoverflow. Le site permets de créer un profil et de poser et répondre à des questions.</a>
+                    , en utilisant: HTML, CSS, JavaScript, MySQL - 5 semaines
+                    Le dépot du site est disponible sur <a
+                            href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
+            </div>
+            <div class="projet">
+                <a href="https://nts-java-2003-pjt3-ressource.javarover.wilders.dev/">
+                    <img alt="image première page du site Wesourse - Projet 3" src="images/Wesource-petite.png"/>
+                </a>
+                <p><u>Projet client:</u> Nous avons crée le site Wesource. C'est une
+                    plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements. Le site permet de rechercher des produits, de consulter les fiches produits
+                    et de consulter les pages "Company". De plus nous avons créés une partie administration avec des profils qui permets de créer et modifier les produits et les companies et les profils.
+                    Nous avons utilisés: HTML, CSS, JavaScript, Materialize, Hibernate, MySQL, Spring Security
+                    Le dépot du site est disponible sur <a
+                            href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
+            </div>
+            <div class="projet">
+                <a href="">
+                    <img alt="" src="images/StarLove.png"/>
+                </a>
+                <p><u>Hackathon n°1:</u> StarLove! Création d'un site sur 2 jours. Le but était de créer un site en un temps très limité en utilisant la base de donnée mise à disposition.
+                    Nous avons créés un site pour trouver l'amour dans le monde de la saga Star Wars en utilisant: HTML, CSS, JDBC, MySQL. Le dépot est sur  <a
+                            href="https://github.com/elisego/star_love.git"> Github.</a></p>
+            </div>
+            <div class="projet">
+                <a href="images/pilulib.png">
+                    <img alt="" src="images/pilulib.png"/>
+                </a>
+                <p><u>Hackathon n°2:</u> Pilulib! Création d'un site en moins de 3 jours. Le but était de coté un site sur le thème de la santé et du remote.
+                    Nous avons crées un site permetant aux personnes agées de remplir leurs piluliers en suivant les indications du site. Nous avons utilisés: HTML, CSS, hibernate, JavaScript, MySQL, Materialize. Le dépot est sur  <a
+                            href="https://github.com/elisego/hackathonDoctolib"> Github.</a></p>
+            </div>
         </div>
     </section>
 </section>
-    <section id="experiences">
-        <div class="soustitre">
-            <h2>Expériences</h2>
-        </div>
+<section id="experiences">
+    <div class="soustitre">
+        <h2>Expériences</h2>
+    </div>
     <table>
         <tr>
             <td><u>2014/2019: </u></td>
-            <td> Gestionnaire comptabilité - DERICHEBOURG PROPRETE : Comptabilité clients et fournisseurs, écritures d'OD, relances clients écrite et téléphonique, analyse des marges, gestion des litiges clients, NDF, ...
+            <td> Gestionnaire comptabilité - DERICHEBOURG PROPRETE : Comptabilité clients et fournisseurs, écritures
+                d'OD, relances clients écrite et téléphonique, analyse des marges, gestion des litiges clients, NDF, ...
             </td>
         </tr>
         <tr>
             <td><u>2012/2013: </u></td>
-            <td>Assistante Crédit, Client et Exploitation - ITALCEMENTI/CALCIA Group :  Comptabilité clients et fournisseurs, cotation des clients à la SFAC, gestion des résiliations et réductions de cotation SFAC, NDF... </td>
+            <td>Assistante Crédit, Client et Exploitation - ITALCEMENTI/CALCIA Group : Comptabilité clients et
+                fournisseurs, cotation des clients à la SFAC, gestion des résiliations et réductions de cotation SFAC,
+                NDF...
+            </td>
         </tr>
         <tr>
             <td><u>2009/2011: </u></td>
@@ -159,12 +191,17 @@
         <li>Lecture: J'aime les livres avec une base historique tel que la série Outlander</li>
         <li>Rock/Métal: Fan du festival Hellfest</li>
         <li>Loisirs créatifs: Peinture, petit bricolage</li>
-        <li>Séries/Films: Series historiques et les films de super héros (Marvel) </li>
+        <li>Séries/Films: Series historiques et les films de super héros (Marvel)</li>
     </ul>
 </section>
 <footer>
 
 </footer>
+<script crossorigin="anonymous"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+</script>
+<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
 <script src="burgermenu.js" type="text/javascript"></script>
 </body>
 </html>
