--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </a>
                 <p><u>Projet client:</u> Nous avons crée le site Wesource. C'est une
                     plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements. Le site permet de rechercher des produits, de consulter les fiches produits
-                    et de consulter les pages "Company". De plus nous avons créés une partie administration avec des profils qui permets de créer et modifier les produits et les companies et les profils.
+                    et de consulter les pages "Company". De plus nous avons créés une partie administration qui permets de créer et modifier les produits, les companies et les profils.
                     Nous avons utilisés: HTML, CSS, JavaScript, Materialize, Hibernate, MySQL, Spring Security
                     Le dépot du site est disponible sur <a
                             href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
