--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="images/pilulib.png">
                     <img alt="" src="images/pilulib.png"/>
                 </a>
-                <p><u>Hackathon n°2:</u> Pilulib! Création d'un site en moins de 3 jours. Le but était de coté un site sur le thème de la santé et du remote.
+                <p><u>Hackathon n°2:</u> Pilulib! Création d'un site en moins de 3 jours. Le but était de créer un site sur le thème de la santé et du remote.
                     Nous avons crées un site permetant aux personnes agées de remplir leurs piluliers en suivant les indications du site. Nous avons utilisés: HTML, CSS, hibernate, JavaScript, MySQL, Materialize. Le dépot est sur  <a
                             href="https://github.com/elisego/hackathonDoctolib"> Github.</a></p>
             </div>
