--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                          src="images/SharemyBrain-petite.png"/>
                 </a>
                 <p><u>Projet 2:</u> Nous avons crée un site style <a href="https://stackoverflow.com/">
-                    Stackoverflow. Le site permets de créer un profil et de poser et répondre à des questions.</a>
+                    Stackoverflow. Le site permets de créer un profil, de poser et répondre à des questions.</a>
                     , en utilisant: HTML, CSS, JavaScript, MySQL - 5 semaines
                     Le dépot du site est disponible sur <a
                             href="https://github.com/elisego/toulouse-0320-java-p2-sharemybrain"> Github.</a></p>
