ajout logo linux

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <img alt="logo SQL" class="logo1" src="images/mysql.png" title="MYSQL">
         <img alt="logo GITHUB" class="logo1" src="images/github.png" title="GITHUB">
         <img alt="logo Materialize" class="logo1" src="images/materialize.png" title="MATERIALIZE">
+        <img alt="logo Linux" class="logo1" src="images/linux.png" title="LINUX">
     </div>
 </section>
 <section id="projets">
