ajout de hellfest historic

--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
     <div class="soustitre">
         <h2>Projets</h2>
     </div>
-    <!--    //TODO: rajouter les hackathons-->
-    <p>Pendant notre formation nous avont réalisés 3 projets et 2 hackathons:</p>
-    <section class="section-projets">
-        <div class="multiple-items">
+    <p>Vous pouvez trouver ci dessous mes projets :</p>
+    <section class="section-projets multiple-items">
             <div class="projet">
                 <a href="https://elisego.github.io/projet1/accueil.html">
                     <img alt="image première page du site Ardoise - Projet 1" src="images/LaPetiteArdoise.png"/>
@@ -134,8 +132,10 @@
                     <img alt="image première page du site Wesourse - Projet 3" src="images/Wesource-petite.png"/>
                 </a>
                 <p><u>Projet client:</u> Nous avons crée le site Wesource. C'est une
-                    plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements. Le site permet de rechercher des produits, de consulter les fiches produits
-                    et de consulter les pages "Company". De plus nous avons créés une partie administration qui permets de créer et modifier les produits, les companies et les profils.
+                    plateforme pour mettre en relation les fabricants de tissus et les marques de vêtements. Le site
+                    permet de rechercher des produits, de consulter les fiches produits
+                    et de consulter les pages "Company". De plus nous avons créés une partie administration qui permets
+                    de créer et modifier les produits, les companies et les profils.
                     Nous avons utilisés: HTML, CSS, JavaScript, Materialize, Hibernate, MySQL, Spring Security
                     Le dépot du site est disponible sur <a
                             href="https://github.com/WildCodeSchool/nantes-java-0320-pjt3-ressource"> Github.</a></p>
@@ -144,18 +144,31 @@
                 <a href="">
                     <img alt="" src="images/StarLove.png"/>
                 </a>
-                <p><u>Hackathon n°1:</u> StarLove! Création d'un site sur 2 jours. Le but était de créer un site en un temps très limité en utilisant la base de donnée mise à disposition.
-                    Nous avons créés un site pour trouver l'amour dans le monde de la saga Star Wars en utilisant: HTML, CSS, JDBC, MySQL. Le dépot est sur  <a
+                <p><u>Hackathon n°1:</u> StarLove! Création d'un site sur 2 jours. Le but était de créer un site en un
+                    temps très limité en utilisant la base de donnée mise à disposition.
+                    Nous avons créés un site pour trouver l'amour dans le monde de la saga Star Wars en utilisant: HTML,
+                    CSS, JDBC, MySQL. Le dépot est sur <a
                             href="https://github.com/elisego/star_love.git"> Github.</a></p>
             </div>
             <div class="projet">
                 <a href="images/pilulib.png">
                     <img alt="" src="images/pilulib.png"/>
                 </a>
-                <p><u>Hackathon n°2:</u> Pilulib! Création d'un site en moins de 3 jours. Le but était de créer un site sur le thème de la santé et du remote.
-                    Nous avons crées un site permetant aux personnes agées de remplir leurs piluliers en suivant les indications du site. Nous avons utilisés: HTML, CSS, hibernate, JavaScript, MySQL, Materialize. Le dépot est sur  <a
+                <p><u>Hackathon n°2:</u> Pilulib! Création d'un site en moins de 3 jours. Le but était de créer un site
+                    sur le thème de la santé et du remote.
+                    Nous avons crées un site permetant aux personnes agées de remplir leurs piluliers en suivant les
+                    indications du site. Nous avons utilisés: HTML, CSS, hibernate, JavaScript, MySQL, Materialize. Le
+                    dépot est sur <a
                             href="https://github.com/elisego/hackathonDoctolib"> Github.</a></p>
             </div>
+        <div class="projet">
+            <a href="">
+                <img alt="" src="images/HellfestHistoric.png"/>
+            </a>
+            <p><u>Checkpoint / Projet perso:</u> Hellfest Historic: Pour mon dernier checkpoint (évaluation) j'ai décidé de créer un projet personnel. C'est un site pour les fan du Hellfest, ou il est possible de rechercher les dates des différents passage de chaque groupes.
+                Il y a une partie administration pour que les personnes autorisés puisse alimenter le site.
+                J'ai utilisé: HTML, CSS, hibernate, JavaScript, Spring security, MySQL, Materialize. Le dépot est sur <a
+                        href="https://github.com/elisego/hellfestHistoric"> Github.</a></p>
         </div>
     </section>
 </section>
@@ -202,6 +215,8 @@
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
 </script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js" type="text/javascript"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
 <script src="burgermenu.js" type="text/javascript"></script>
 </body>
