--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <img alt="" src="images/HellfestHistoric.png"/>
             </a>
             <p><u>Checkpoint / Projet perso:</u> Hellfest Historic: Pour mon dernier checkpoint (évaluation) j'ai décidé de créer un projet personnel. C'est un site pour les fan du Hellfest, ou il est possible de rechercher les dates des différents passage de chaque groupes.
-                Il y a une partie administration pour que les personnes autorisés puisse alimenter le site.
+                Il y a une partie administration pour que les personnes autorisés puissent alimenter le site.
                 J'ai utilisé: HTML, CSS, hibernate, JavaScript, Spring security, MySQL, Materialize. Le dépot est sur <a
                         href="https://github.com/elisego/hellfestHistoric"> Github.</a></p>
         </div>
